Tue Jan  7 19:01:25 2003  Tim Janik  <timj@gtk.org>

	* README: fix libgnomecanvas link.
	* docs/site-download.texi: same here.

	* docs/site-documentation.texi: make link validator happy.
	* docs/site-links-related.texi:
	* docs/site-links-synthesis.texi: same here.

	* docs/site-links-related.texi: added foreign project sites.

	* docs/site-development.texi: add validator urls to aid website
	development.

Tue Jan  7 17:04:11 2003  Tim Janik  <timj@gtk.org>

	* docs/generated/scandocs.pl (print header): remove texi
	macros \@hasbanner{large} @navigation{navigation.xml} to
	spare layout space from function docs.

Tue Jan  7 16:44:04 2003  Alper Ersoy  <dirt@gtk.org>

	* docs/generated/scandocs.pl: fix parameter markup.

	* docs/generated/html.xsl: fix empty subtopic lines in news
	entries.

Tue Jan  7 00:17:40 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: setup BstAppControl, update led.

	* beast-gtk/bstappcontrol.[hc]: new files, providing a tape-control
	alike GUI interface to project playback (not currently functional).

	* beast-gtk/gxk/gxkled.[hc]: implemented led display widget.

	* beast-gtk/gxk/gxkpolygon.[hc]: new widget that can display
	unfilled lines and arcs, comes with preset polygons for tape
	controls.

	* beast-gtk/gxk/gxktest.c: test program for GXK code.

	* */Makefile.am: general INCLUDE fixes.

	* beast-gtk/Makefile.am: maintain same source file order for headers
	and C sources.

	* beast-gtk/gxk/Makefile.am: compact source file listing, build
	gxktest.

Sun Jan  5 23:50:56 2003  Alper Ersoy  <dirt@gtk.org>

	* docs/teximacros.texi: fix @path{} macro handling.

Sat Jan  4 12:42:10 2003  Alper Ersoy  <dirt@gtk.org>

	* bse/bseautodoc.c: s/Document Revision/Document Revised/.
	
	* docs/generated/scandocs.pl: fix sorting of function descriptions.
	
Fri Jan  3 08:46:46 2003  Tim Janik  <timj@gtk.org>

	* docs/site-news.texi: 
	* docs/site-oldnews.texi: rotate news, so there're only two
	entries on the front page.
